# WASM_Rust-N-Body

./: .gitignore  Cargo.toml  README.md  build_nbody_wasm_js.bundle.0966509b445ad72a7e97.js  build_nbody_wasm_js.bundle.0a6eec6d0da20c2ec45b.js  build_nbody_wasm_js.bundle.305a842d39614055183a.js  build_nbody_wasm_js.bundle.3531e90b9a1ae8e89f85.js  build_nbody_wasm_js.bundle.9c0a75f9fcd52b5104a3.js  build_nbody_wasm_js.bundle.d85c3abcff6fe89e7975.js  bundle.0a6eec6d0da20c2ec45b.js  bundle.167751fa6c739984f12f.js  bundle.28bc01cf0087d759b67f.js  bundle.305a842d39614055183a.js  bundle.3531e90b9a1ae8e89f85.js  bundle.479ca52b87916396d6a5.js  bundle.4ea4874f2af8eeb66a63.js  bundle.6598f1919bf64e6d2e3c.js  bundle.6a3492c2ad81a0123944.js  bundle.733beeb8c8887c35d849.js  bundle.9c0a75f9fcd52b5104a3.js  bundle.d85c3abcff6fe89e7975.js  index.html  nbody_wasm.d.ts  nbody_wasm.js  nbody_wasm_bg.js  nbody_wasm_bg.wasm.d.ts  package-lock.json  package.json
public/: index.html
src/: debug.rs  index.jsx  main.rs
