[package]
name = "nbody_wasm"
version = "0.1.0"
author = "Jeremiah Simmons"
description = "N-Body program using niave Euler written in Rust with the Bevy game engine."
respository = ""
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
bevy = "*"
bevy_prototype_lyon = "*"
bevy_egui = "*"
bevy_fly_camera = "*"
bevy_pancam = "*" 
bevy-inspector-egui = "*"
wasm-bindgen = "0.2"
bevy-web-resizer = "*"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
#debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
